crates/escalier/tests/pass/mapped_types.esc
type Obj = {a: number, b?: string, mut c: boolean, mut d?: number};
type PartialObj = Partial<Obj>;

let partial_obj: PartialObj = {b: "hello"};

type Custom<T> = {
    +mut [P in keyof T]+?: T[P];
};
let custom_obj: mut Custom<Obj> = {b: "hello"};
custom_obj.b = "world";
