crates/escalier/tests/errors/rest_param.esc
let add = (...args: [number, number]): number => args[0] + args[1];
let sum = add("hello", "world");
add();
